<resources>
    <string name="app_name">KS Chat</string>
    <string name="ks_chat">KS CHAT</string>
    <string name="slogan">KMA Stranger Chat\nMore chat, more fun!</string>
    <string name="author_copyright">\@nhóm sinh viên CT5D</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="the_email_address_is_incomplete">The email address is incomplete</string>
    <string name="password">Password</string>
    <string name="email_address_hint">Email address</string>
    <string name="retry">Retry!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="retype_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="privacy">Privacy</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>