<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        />

    <item android:id="@+id/chats"
        android:icon="@drawable/ic_chat"
        android:title="@string/chats"/>

    <item android:id="@+id/friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/friends"/>

    <item android:id="@+id/notification"
        android:icon="@drawable/ic_notification"
        android:title="Notifications"
        />
    <item android:id="@+id/privacy"
        android:icon="@drawable/ic_privacy"
        android:title="@string/privacy"/>

    <item android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="Settings"/>

</menu>