<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="SignUpViewModel"
            type="vn.id.hvg.kschat.viewmodels.SignUpViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.KSChat.PurpleBackground"
        tools:context=".views.screens.SignUpActivity">

        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/logo_img"
                android:layout_width="110dp"
                android:layout_height="116dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/sign_up"
                android:textAppearance="@style/Theme.KSChat.Text.AppNameLabel" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_input_layout"
                style="@style/Theme.KSChat.TextInputLayout.Credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="@string/first_name"
                android:textAppearance="@style/Theme.KSChat.Text.InfoTextFieldLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_edt"
                    style="@style/Theme.KSChat.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPersonName"
                    android:text="@={SignUpViewModel.firstNameLiveData}"
                    android:textAppearance="@style/Theme.KSChat.Text.InfoTextField" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_input_layout"
                style="@style/Theme.KSChat.TextInputLayout.Credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textAppearance="@style/Theme.KSChat.Text.InfoTextFieldLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_edt"
                    style="@style/Theme.KSChat.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPersonName"
                    android:text="@={SignUpViewModel.lastNameLiveData}"
                    android:textAppearance="@style/Theme.KSChat.Text.InfoTextField" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/Theme.KSChat.TextInputLayout.Credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textAppearance="@style/Theme.KSChat.Text.InfoTextFieldLabel"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edt"
                    style="@style/Theme.KSChat.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textEmailAddress"
                    android:text="@={SignUpViewModel.emailLiveData}"
                    android:textAppearance="@style/Theme.KSChat.Text.InfoTextField" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/Theme.KSChat.TextInputLayout.Credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textAppearance="@style/Theme.KSChat.Text.InfoTextFieldLabel"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edt"
                    style="@style/Theme.KSChat.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={SignUpViewModel.passwordLiveData}"
                    android:textAppearance="@style/Theme.KSChat.Text.InfoTextField" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_input_layout"
                style="@style/Theme.KSChat.TextInputLayout.Credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retype_password"
                android:textAppearance="@style/Theme.KSChat.Text.InfoTextFieldLabel"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_edt"
                    style="@style/Theme.KSChat.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={SignUpViewModel.confirmPasswordLiveData}"
                    android:textAppearance="@style/Theme.KSChat.Text.InfoTextField" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/text_button_bg"
                android:fontFamily="@font/montserrat_bold"
                android:onClick="@{() -> SignUpViewModel.onSignupClick()}"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
