<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/primary"
    app:headerLayout="@layout/drawer_header"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/profile_ic_tv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_profile" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/profile_ic_tv"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center_vertical"
                        android:text="@string/profile"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_arrow_forward" />
                </RelativeLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#424CA5">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/chat_ic_tv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_chat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/chat_ic_tv"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center_vertical"
                        android:text="@string/chats"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_arrow_forward" />
                </RelativeLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/friend_ic_tv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_friends" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/friend_ic_tv"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center_vertical"
                        android:text="@string/friends"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_arrow_forward" />
                </RelativeLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/notification_ic_tv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_notification" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/notification_ic_tv"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center_vertical"
                        android:text="@string/notifications"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_arrow_forward" />
                </RelativeLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/privacy_ic_tv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_privacy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/privacy_ic_tv"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center_vertical"
                        android:text="@string/privacy"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_arrow_forward" />
                </RelativeLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/setting_ic_tv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_settings" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/setting_ic_tv"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center_vertical"
                        android:text="@string/settings"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_arrow_forward" />
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/log_out"
            android:background="@drawable/text_button_bg"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="90dp"
            android:layout_centerHorizontal="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="start|center_vertical"
            android:drawableRight="@drawable/ic_log_out"
            app:iconGravity="textStart"
            app:iconPadding="-60dp"
            />

    </RelativeLayout>
</com.google.android.material.navigation.NavigationView>